# roadmap

./: .gitignore  Dockerfile_api  Dockerfile_client  README.md  history.php  index.php  renovate.json
api/: Database.py  DatabaseConnection.py  DateFormatter.py  Pipfile  RequestValidator.py  RoadmapAPIServer.py  UserService.py  app.py  pyproject.toml  settings-example.json  settings.json  version.json
api/blueprints/: MilestoneAPI.py  RoadmapAPI.py  SubTaskAPI.py  TaskAPI.py
api/docs/: api.html  api.yml  swagger-to-html.py
api/logic/: Constants.py  Database.py  DatabaseMigrator.py  RequestValidator.py
api/templates/: api.html
client/: AdminWrapper.py  ApiRequest.py  Constants.py  Localization.py  Pipfile  RoadmapClient.py  pyproject.toml  settings-example.json  settings.json  version.json
client/blueprints/: Authentication.py  Milestones.py  Roadmaps.py  SubTasks.py  Tasks.py
client/logic/: ApiRequest.py  Localization.py  UrlBuilder.py
client/static/css/: style.css
client/static/js/: main.js
client/static/materialize/js/: materialize.min.js
client/templates/: error.html  index.html  login.html  macros.html  overview.html  roadmap.html  roadmapFragment.html
client/templates/admin/: admin-roadmaps.html
client/templates/admin/milestones/: edit.html  overview.html
client/templates/admin/roadmaps/: edit.html  overview.html
client/templates/admin/subtasks/: edit.html  overview.html
client/templates/admin/tasks/: edit.html  overview.html
css/: style.css
docker/postgres/: Dockerfile  docker-compose.yaml  roadmaps.sql
docs/: api.yml
js/: main.js
notes/: DB-Model.txt
php/: api.php  database.php  error.php  example.php  getLanguageJSON.php  index.php  language.json  mysql.php  overview.php  pgsql.php  psql.php
php/admin/: admin-edit-milestone.php  admin-edit-roadmap.php  admin-edit-subtask.php  admin-edit-task.php  admin-milestones.php  admin-roadmaps.php  admin-subtasks.php  admin-tasks.php  index.php  login.php  logout.php
php/admin/helper/: checkLogin.php  delete-milestone.php  delete-roadmap.php  delete-subtask.php  delete-task.php  edit-milestone.php  edit-roadmap.php  edit-subtask.php  edit-task.php  mark-all-tasks-as-done.php  settings-template.php  settings.php
