[tool.poetry]
name = "RoadmapApi"
version = "2.19.0"
description = "Allows you to create multiple roadmaps for your projects and displays them in a timeline"
authors = ["deadlocker8"]

[[tool.poetry.source]]
name = "TheCodeLabs"
url = "https://pypi.thecodelabs.de"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
thecodelabs-baseutils = {version = "*", source = "TheCodeLabs" }
thecodelabs-flaskutils = {version = "*", source = "TheCodeLabs" }
flask = "==2.3.3"
flask_jwt_extended = "==4.5.2"
gevent = "==23.9.1"
psycopg2 = "==2.9.7"
pyyaml = "==6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"