[tool.poetry]
name = "RoadmapApi"
version = "2.24.0"
description = "Allows you to create multiple roadmaps for your projects and displays them in a timeline"
authors = ["deadlocker8"]

[[tool.poetry.source]]
name = "TheCodeLabs"
url = "https://pypi.thecodelabs.de"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
thecodelabs-baseutils = {version = "*", source = "TheCodeLabs" }
thecodelabs-flaskutils = {version = "*", source = "TheCodeLabs" }
flask = "==3.1.1"
flask_jwt_extended = "==4.7.1"
gevent = "==24.11.1"
psycopg2 = "==2.9.10"
pyyaml = "==6.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"