[tool.poetry]
name = "RoadmapClient"
version = "1.20.0"
description = "Allows you to create multiple roadmaps for your projects and displays them in a timeline"
authors = ["deadlocker8"]

[[tool.poetry.source]]
name = "TheCodeLabs"
url = "https://pypi.thecodelabs.de"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.13"
thecodelabs-baseutils = {version = "*", source = "TheCodeLabs" }
thecodelabs-flaskutils = {version = "*", source = "TheCodeLabs" }
flask = "==3.1.2"
gevent = "==25.9.1"
requests = "==2.32.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"